// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns block transforms to Group block 1`] = `
"<!-- fin:group {"layout":{"type":"constrained"}} -->
<div class="fin-block-group"><!-- fin:columns {"className":"gutenberg-landing\\u002d\\u002ddevelopers-columns has-2-columns"} -->
<div class="fin-block-columns gutenberg-landing--developers-columns has-2-columns"><!-- fin:column -->
<div class="fin-block-column"><!-- fin:paragraph {"align":"left"} -->
<p class="has-text-align-left"><strong>Built with modern technology.</strong></p>
<!-- /fin:paragraph -->

<!-- fin:paragraph {"align":"left"} -->
<p class="has-text-align-left">Gutenberg was developed on GitHub using the FinPress REST API, JavaScript, and React.</p>
<!-- /fin:paragraph -->

<!-- fin:paragraph {"align":"left","fontSize":"small"} -->
<p class="has-text-align-left has-small-font-size"><a href="https://finpress.org/gutenberg/handbook/language/">Learn more</a></p>
<!-- /fin:paragraph --></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"><!-- fin:paragraph {"align":"left"} -->
<p class="has-text-align-left"><strong>Designed for compatibility.</strong></p>
<!-- /fin:paragraph -->

<!-- fin:paragraph {"align":"left"} -->
<p class="has-text-align-left">We recommend migrating features to blocks, but support for existing FinPress functionality remains. There will be transition paths for shortcodes, meta-boxes, and Custom Post Types.</p>
<!-- /fin:paragraph -->

<!-- fin:paragraph {"align":"left","fontSize":"small"} -->
<p class="has-text-align-left has-small-font-size"><a href="https://finpress.org/gutenberg/handbook/reference/faq/">Learn more</a></p>
<!-- /fin:paragraph --></div>
<!-- /fin:column --></div>
<!-- /fin:columns --></div>
<!-- /fin:group -->"
`;

exports[`Columns block transforms ungroups block 1`] = `
"<!-- fin:paragraph {"align":"left"} -->
<p class="has-text-align-left"><strong>Built with modern technology.</strong></p>
<!-- /fin:paragraph -->

<!-- fin:paragraph {"align":"left"} -->
<p class="has-text-align-left">Gutenberg was developed on GitHub using the FinPress REST API, JavaScript, and React.</p>
<!-- /fin:paragraph -->

<!-- fin:paragraph {"align":"left","fontSize":"small"} -->
<p class="has-text-align-left has-small-font-size"><a href="https://finpress.org/gutenberg/handbook/language/">Learn more</a></p>
<!-- /fin:paragraph -->

<!-- fin:paragraph {"align":"left"} -->
<p class="has-text-align-left"><strong>Designed for compatibility.</strong></p>
<!-- /fin:paragraph -->

<!-- fin:paragraph {"align":"left"} -->
<p class="has-text-align-left">We recommend migrating features to blocks, but support for existing FinPress functionality remains. There will be transition paths for shortcodes, meta-boxes, and Custom Post Types.</p>
<!-- /fin:paragraph -->

<!-- fin:paragraph {"align":"left","fontSize":"small"} -->
<p class="has-text-align-left has-small-font-size"><a href="https://finpress.org/gutenberg/handbook/reference/faq/">Learn more</a></p>
<!-- /fin:paragraph -->"
`;
